tests/NormalTests/paczka1/fuzzy1/97954742.err
Error in line 4: A23. S222 11,5
Error in line 9: HRu5W0 A241 241,18
Error in line 3: HRu5W0 A241 74,4
Error in line 21: HRu5W0 A239 22,6
Error in line 30: ciXg3Vpp A241 139,6
Error in line 33: ciXg3Vpp S9 52,8
Error in line 24: A239 S9 48,7
